# resources/views/emails/certificate_review_user.blade.php
@@ -1,0 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Certificate Review</title>
+</head>
+<body style="font-family: Arial, sans-serif; text-align: left;">
+<p>Welcome, We will check this certificate and get back to you as soon as possible.</p>
+</body>
+</html>
+
++
